<resources>
    <string name="app_name">CowMap</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="borja_chac_n_lvarez">Borja Chacón Álvarez</string>
    <string name="contrase_a">Contraseña</string>
    <string name="inicio">Inicio</string>
    <string name="cancelar">Cancelar</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="introduce_la_contrase_a">Introduce la contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="regis">Registro</string>
    <string name="listado_de_animales">Listado De Animales</string>
    <string name="localizaci_n">Localización</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="estado">Estado</string>
    <string name="crotales">Crotales</string>
    <string name="apoyo">Apoyo</string>
    <string name="nombre">Nombre</string>
    <string name="crotal">Crotal</string>
    <string name="introduce_nombre_del_animal">Introduce nombre del animal</string>
    <string name="introduce_el_crotal_del_animal">introduce el crotal del animal</string>
    <string name="agregar">Agregar</string>
    <string name="borrar">Borrar</string>
    <string name="buscar">Buscar</string>
    <string name="menu_principal">MENU PRINCIPAL</string>
</resources>